cmake_minimum_required(VERSION 3.23)
project(module02)

set(CMAKE_CXX_STANDARD 20)

add_executable(module02 main.cpp)
add_executable(study_reference_operator study_reference_operator.cpp)
add_executable(study_inline_functions study_inline_functions.cpp)
add_executable(study_pointer study_pointer.cpp)
add_executable(study_scope_operator study_scope_operator.cpp)
